--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,16 @@ h1 {
     font-size: 50px;
 }
 #cards {
-    margin: 5% 18%;
-    text-align: center;
+    width: 100%;
 }
 .employee {
-    margin: 3% 3%;
+    margin: auto;
 }
 a {
     text-decoration: none;
     color: black;
+}
+.emp-row {
+    margin: auto;
+    margin-top: 3%;
 }
